# Desktop-pet

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup-mac.sh  setup-windows.bat  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/pet/: Achievement.ts  CatSprite.ts  Config.ts  CowSprite.ts  DogSprite.ts  Pet.ts  PetState.ts  Physics.ts  ScreenTime.ts  SkinManager.ts  TimeAwareness.ts  Weather.ts  WeatherOverlay.ts  WeatherSprite.ts  care-messages.json  config.json
src/styles/: main.css
